crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@129.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into capitals values ('Sacramento', 3.694E+5, 30, 'CA');"
---
InsertStmt@0..63
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "capitals"
  Whitespace@20..21 " "
  SelectStmt@21..61
    Values@21..27 "values"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..61
      AConst@29..41
        Sconst@29..41 "'Sacramento'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..51
        Fconst@43..51 "3.694E+5"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..55
        Iconst@53..55 "30"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..61
        Sconst@57..61 "'CA'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

