crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@130.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into capitals values ('Madison', 1.913E+5, 845, 'WI');"
---
InsertStmt@0..61
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "capitals"
  Whitespace@20..21 " "
  SelectStmt@21..59
    Values@21..27 "values"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..59
      AConst@29..38
        Sconst@29..38 "'Madison'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..48
        Fconst@40..48 "1.913E+5"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..53
        Iconst@50..53 "845"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..59
        Sconst@55..59 "'WI'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

