crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@142.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select tableoid::regclass, * from cities;"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..25
    TypeCast@7..25
      ColumnRef@7..15
        Ident@7..15 "tableoid"
      Typecast@15..17 "::"
      TypeName@17..25
        Ident@17..25 "regclass"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    ColumnRef@27..28
      AStar@27..28
        Ascii42@27..28 "*"
  Whitespace@28..29 " "
  From@29..33 "from"
  Whitespace@33..34 " "
  RangeVar@34..40
    Ident@34..40 "cities"
  Ascii59@40..41 ";"

