crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@161.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into twoconstraints values(1, '((0,0),(1,1))');"
---
InsertStmt@0..54
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "twoconstraints"
  Whitespace@26..27 " "
  SelectStmt@27..52
    Values@27..33 "values"
    Ascii40@33..34 "("
    List@34..52
      AConst@34..35
        Iconst@34..35 "1"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..52
        Sconst@37..52 "'((0,0),(1,1))'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

