crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@171.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: commit;
---
TransactionStmt@0..7
  Commit@0..6 "commit"
  Ascii59@6..7 ";"

